#
# some news ... see also TODO for hints
#

2015-10-11 -> add some skeleton stuff