@@ -1,3 +1,6 @@
 # List of source files which contain translatable strings.
 
 src/main.c
+lib/helper.c
+lib/config.c
+lib/libservice.h
