@@ -2,4 +2,6 @@
 # some news ... see also TODO for hints
 #
 
+2016-09-14 -> sync to latest libbaalue
+
 2015-10-11 -> add some skeleton stuff
